[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
chrono = "0.4.23"
glam = "0.22.0"
itertools = "0.10.5"
pathfinding = "4.0.0"
rayon = "1.6.1"
regex = "1.7.0"
